--- a/components/input/new-comment.module.css
+++ b/components/input/new-comment.module.css
@@ -38,5 +38,9 @@
 }
 
 .form button {
-  background-color: white;
+  background-color: white !important;
+}
+
+.form button:hover {
+  opacity: 0.9;
 }
